--- a/birthday.html
+++ b/birthday.html
@@ -40,6 +40,14 @@
       </div>
     </div>
 
+    <div class="try-it">
+      <p>
+        <a href="https://friend-birthday-gift.vercel.app/" target="_blank"
+          >Try it yourself!</a
+        >
+      </p>
+    </div>
+
     <footer class="copyright">
       <p>
         &copy; 2024 -
@@ -53,7 +61,9 @@
         const urlParams = new URLSearchParams(window.location.search);
 
         // Get the ID from the URL
-        const id = urlParams.get("id");
+        // const id = urlParams.get("id");
+
+        const id = "72c6c737-0849-472b-8fb0-2ac4e82915e2";
 
         console.log(id);
 
@@ -67,13 +77,14 @@
           const response = await fetch(
             `https://birthday-gift-api.vercel.app/api/birthday/${id}`
           );
+
           // Ensure response is ok
           if (!response.ok) {
             throw new Error("Birthday details not found!");
           }
 
           const data = await response.json();
-          const { friendName, senderName, imageUrl } = data;
+          const { friendName, senderName, message, imageUrl } = data.data;
 
           const todayMessage = `Today is ${friendName}'s birthday 🎊🎉`;
           const birthdayMessage = `Happy Birthday, ${friendName} 🥳`;
@@ -86,8 +97,7 @@
           document.getElementById("birthdayImage").src =
             imageUrl || "default-image.jpg";
 
-          const wishingText = `I wish you a year full of joy, happiness, and success. May all your wishes come true. Happy Birthday, ${friendName} 🎂\n\nfrom: ${senderName}`;
-          document.getElementById("wishingText").textContent = wishingText;
+          document.getElementById("wishingText").textContent = message;
         } catch (err) {
           console.error(err);
           document.body.innerHTML = "<h2>Birthday details not found! 💥</h2>";
