Comment debugging line 	modified:   birthday.html

--- a/birthday.html
+++ b/birthday.html
@@ -61,9 +61,9 @@
         const urlParams = new URLSearchParams(window.location.search);
 
         // Get the ID from the URL
-        // const id = urlParams.get("id");
+        const id = urlParams.get("id");
 
-        const id = "72c6c737-0849-472b-8fb0-2ac4e82915e2";
+        // const id = "72c6c737-0849-472b-8fb0-2ac4e82915e2";
 
         console.log(id);
 
