--- a/birthday.html
+++ b/birthday.html
@@ -8,44 +8,27 @@
   </head>
   <body>
     <div id="header">
-      <h1 id="todayMessage" class="today-message"></h1>
+      <h1 id="happyBirthday" class="happy-birthday"></h1>
+
       <img
         src=""
         id="birthdayImage"
         class="birthday-image"
         alt="Friend's image"
       />
+
       <p id="birthdayMessage" class="birthday-message"></p>
-    </div>
 
-    <div class="gift-section">
-      <h2>Here's how happy I am for you today 🤩</h2>
-      <figure id="happy" class="gift-img"></figure>
-    </div>
-
-    <div class="gift-section">
-      <h2>How people react when you enter a place 🤯</h2>
-      <figure id="people-react" class="gift-img"></figure>
-    </div>
-
-    <div class="gift-section">
-      <h2>If I had to describe you with ONE word 👇</h2>
-      <figure id="awesome" class="gift-img"></figure>
-    </div>
-
-    <div class="gift-section">
-      <h2>Finally...</h2>
-      <div id="wishing" class="best-wishes">
-        <p class="wishing-text" id="wishingText"></p>
-      </div>
-    </div>
-
-    <div class="try-it">
-      <p>
-        <a href="https://friend-birthday-gift.vercel.app/" target="_blank"
-          >Try it yourself!</a
-        >
+      <p class="from-sender">
+        <strong>From: </strong> <span class="sender"></span>
       </p>
+
+      <a
+        href="https://friend-birthday-gift.vercel.app/"
+        target="_blank"
+        class="send-your-gift"
+        >Send Your Gift</a
+      >
     </div>
 
     <footer class="copyright">
@@ -55,54 +38,6 @@
       </p>
     </footer>
 
-    <script>
-      window.onload = async function () {
-        // Extract the ID from the URL path (e.g., /birthday.html?id=123)
-        const urlParams = new URLSearchParams(window.location.search);
-
-        // Get the ID from the URL
-        const id = urlParams.get("id");
-
-        // const id = "72c6c737-0849-472b-8fb0-2ac4e82915e2";
-
-        console.log(id);
-
-        // Check if the ID is valid
-        if (!id || id === "undefined") {
-          document.body.innerHTML = "<h2>Invalid birthday details!</h2>";
-          return;
-        }
-
-        try {
-          const response = await fetch(
-            `https://birthday-gift-api.vercel.app/api/birthday/${id}`
-          );
-
-          // Ensure response is ok
-          if (!response.ok) {
-            throw new Error("Birthday details not found!");
-          }
-
-          const data = await response.json();
-          const { friendName, senderName, message, imageUrl } = data.data;
-
-          const todayMessage = `Today is ${friendName}'s birthday 🎊🎉`;
-          const birthdayMessage = `Happy Birthday, ${friendName} 🥳`;
-
-          document.getElementById("todayMessage").textContent = todayMessage;
-          document.getElementById("birthdayMessage").textContent =
-            birthdayMessage;
-
-          // Handle missing image URL gracefully
-          document.getElementById("birthdayImage").src =
-            imageUrl || "default-image.jpg";
-
-          document.getElementById("wishingText").textContent = message;
-        } catch (err) {
-          console.error(err);
-          document.body.innerHTML = "<h2>Birthday details not found! 💥</h2>";
-        }
-      };
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
