--- a/birthday.html
+++ b/birthday.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <canvas id="fireworksCanvas"></canvas>
+
     <div id="header">
       <h1 id="happyBirthday" class="happy-birthday"></h1>
 
