Customized the home page to looks like a birthday page 	modified:   birthday.html 	modified:   homeScript.js 	modified:   homeStyle.css 	modified:   index.html 	modified:   style.css

--- a/birthday.html
+++ b/birthday.html
@@ -28,8 +28,8 @@
       <a
         href="https://friend-birthday-gift.vercel.app/"
         target="_blank"
-        class="send-your-gift"
-        >Send Your Gift</a
+        class="try-it-now"
+        >TRY IT NOW</a
       >
     </div>
 
