Remove the <a> tags from copy-right and change alt text color to orange 	modified:   birthday.html 	modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/birthday.html
+++ b/birthday.html
@@ -34,10 +34,7 @@
     </div>
 
     <footer class="copyright">
-      <p>
-        &copy; 2024 -
-        <a href="https://anwar-rizk.netlify.app/" target="_blank">Anwar Rizk</a>
-      </p>
+      <p>&copy; 2024 - Anwar Rizk</p>
     </footer>
 
     <script src="script.js"></script>
