--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@ I wish you a year full of joy, happiness, and success. May all your wishes come 
     </form>
 
     <footer class="copyright">
-      <p>
-        &copy; 2024 -
-        <a href="https://anwar-rizk.netlify.app/" target="_blank">Anwar Rizk</a>
-      </p>
+      <p>&copy; 2024 - Anwar Rizk</p>
     </footer>
 
     <script src="homeScript.js"></script>
