--- a/birthday.html
+++ b/birthday.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Happy Birthday</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
+    <title>Happy Birthday</title>
   </head>
   <body>
     <canvas id="fireworksCanvas"></canvas>
