Edit the responsive design of the mobile view 	modified:   homeScript.js 	modified:   homeStyle.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Birthday Gift</title>
   </head>
   <body>
-    <h1>Birthday Gift 🙈</h1>
+    <h1>Birthday Gift 🎁</h1>
 
     <form class="form-container" id="birthdayForm">
       <section class="input-section">
@@ -29,7 +29,7 @@
           required
         />
 
-        <label for="friendImage">Upload your friend's image:</label>
+        <label for="friendImage">Upload your friend's image (Optional):</label>
         <input
           type="file"
           name="friendImage"
