--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 I wish you a year full of joy, happiness, and success. May all your wishes come true. Happy Birthday! 🎉</textarea
         >
 
+        <button type="button" id="suggestMessageBtn">Suggest message 🎲</button>
+
         <label for="senderName">Enter your name:</label>
         <input
           type="text"
